# RSSWatch

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
conf/: RSSWatch.conf
include/: Common.h  ConfFile.h  Config.h  EventLoop.h  HttpServer.h
src/: Common.cpp  ConfFile.cpp  Config.cpp  EventLoop.cpp  HttpServer.cpp  main.cpp
